--- a/Blog/Views/NgPartials/EditLayout.cshtml
+++ b/Blog/Views/NgPartials/EditLayout.cshtml
@@ -1,34 +1,52 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "EditLayout";
 }
 
-<h2>EditLayout</h2>
+<section class="content-header">
+    <h1>
+        Header
+    </h1>
+</section>
 
-<h4>Widgets column location</h4>
-<form >
-    <label>
-        <input type="radio" ng-model="model.WidgetsColumnSide" value="left">
-        Left
-    </label><br />
-    <label>
-        <input type="radio" ng-model="model.WidgetsColumnSide" value="right">
-        Right
-    </label><br />
-</form>
+<section class="content">
+    <div class="box box-primary">
+            <div class="box-body ">
+                <div class="col-md-6">
+                    <div class="form-group" ng-hide="status == null">
+                        <div id="statusBox" ng-class="status.clas" class="alert " role="alert">{{status.msg}}</div>
+                    </div>
+                    <div class="form-group">
+                        <label>Widgets column location</label>
+                        <form>
+                            <label>
+                                <input type="radio" ng-model="model.WidgetsColumnSide" value="left">
+                                Left
+                            </label><br />
+                            <label>
+                                <input type="radio" ng-model="model.WidgetsColumnSide" value="right">
+                                Right
+                            </label><br />
+                        </form>
+                    </div>
 
-@*<ul ui-sortable ng-model="widgets">
-    <li ng-repeat="w in widgets">{{w}}</li>
-</ul>*@
+                    <div class="form-group">
+                        <div class="layoutsettings floatleft">
+                            <div ui-sortable="sortableOptions" class="apps-container screen floatleft" ng-model="model.WidgetList">
+                                <div  class="app" ng-repeat="w in model.WidgetList" style="font-weight:normal; background-color: #9FD4FF; border-radius:0;">{{w}}</div>
+                            </div>
+                            <div ui-sortable="sortableOptions" class="apps-container screen floatleft" ng-model="widgets">
+                                <div class="app" ng-repeat="w in widgets">{{w}}</div>
+                            </div>
+                            <div style="clear: both;"></div>
+                        </div>
 
-<div class="layoutsettings floatleft">
-    <div ui-sortable="sortableOptions" class="apps-container screen floatleft" ng-model="model.WidgetList">
-        <div class="app" ng-repeat="w in model.WidgetList">{{w}}</div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="form-group">
+                        <input id="submit" type="button" ng-disabled="loading" ng-click="submit()" value="Save" class="btn btn-default" />
+                    </div>
+
+                </div>
+            </div>
     </div>
-    <div ui-sortable="sortableOptions" class="apps-container screen floatleft" ng-model="widgets">
-        <div class="app" ng-repeat="w in widgets">{{w}}</div>
-    </div>
-    <div style="clear: both;"></div>
-</div>
-
-<div class="clear"></div>
+</section>
