--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -203,7 +203,11 @@ desired effect
     @Scripts.Render(Bundles.Js.AngularResource)
     @Scripts.Render(Bundles.Js.AngularSortable)
 
-    @Scripts.Render(Bundles.Js.AngularApp)
+    <script src="~/Scripts/ag-grid.js"></script>
 
+    <link href="~/Content/ag-grid.css" rel="stylesheet" />
+    <link href="~/Content/theme-bootstrap.css" rel="stylesheet" />
+
+    @Scripts.Render(Bundles.Js.AngularApp)
 </body>
 </html>
