--- a/Blog/Content/AdminPanel/Custom.css
+++ b/Blog/Content/AdminPanel/Custom.css
@@ -67,3 +67,12 @@ border-radius: 6px;
 .box-body{
     padding-top:30px;
 }
+
+.myGrid {
+    width: 1000px;
+    height: 250px;
+  }
+
+.ui-grid-row, .ui-grid-cell {
+  height: auto!important;
+}
