--- a/Blog/Views/NgPartials/Posts.cshtml
+++ b/Blog/Views/NgPartials/Posts.cshtml
@@ -12,6 +12,18 @@
 
 <section class="content">
     <div class="box box-primary">
+
+       @* <table datatable="" dt-options="showCase.dtOptions" dt-columns="showCase.dtColumns" class="row-border hover"></table>*@
+        <table id="posts-grid" class="display" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Date</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+        </table>
+
         <div class="box-body table-responsive no-padding">
             <table class="table table-hover">
 
@@ -55,3 +67,8 @@
             </div>*@
   
 </section>
+
+<script>
+    //@@ sourceURL=XXXXXXXXXXXXXXXXXXXX.js
+    
+</script>
