Post Categories CRUD

--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -148,6 +148,13 @@ desired effect
                         </ul>
                     </li>
                     <li class="treeview">
+                        <a href="#"><i class="fa fa-link"></i> <span>Categories</span> <i class="fa fa-angle-left pull-right"></i></a>
+                        <ul class="treeview-menu">
+                            <li><a href="Categories">Categories</a></li>
+                            <li><a href="Categories/Add">Add category</a></li>
+                        </ul>
+                    </li>
+                    <li class="treeview">
                         <a href="#"><i class="fa fa-link"></i> <span>Appearance</span> <i class="fa fa-angle-left pull-right"></i></a>
                         <ul class="treeview-menu">
                             <li><a href="Appearance/Layout">Layout</a></li>
