--- a/Blog/Views/NgPartials/Categories.cshtml
+++ b/Blog/Views/NgPartials/Categories.cshtml
@@ -1,10 +1,7 @@
-﻿@{
-    ViewBag.Title = "Blogs";
-}
-
+﻿
 <section class="content-header">
     <h1>
-        Posts
+        Categories
     </h1>
 </section>
 
@@ -13,16 +10,15 @@
 <section class="content">
     <div class="box box-primary">
 
-        <table id="posts-grid" class="display" cellspacing="0" width="100%">
+        <table id="categories-grid" class="display" cellspacing="0" width="100%">
             <thead>
                 <tr>
-                    <th>Title</th>
-                    <th>Date</th>
+                    <th>Name</th>
                     <th>Actions</th>
                 </tr>
             </thead>
         </table>
 
     </div>
-  
+
 </section>
